# blobntree

./: Cargo.toml  chicken_idle-20210714-015653.piskel  ghost-20210714-021707.piskel
graphics/: world.frag
notes/: windowing.md
sprites/: chicken-Sheet.json  chicken_smear.aseprite  chicken_smear.json  mushroom.aseprite  mushroom.json  tile.aseprite  tile.json  tree.aseprite
src/: game.rs  lib.rs  main.rs
src/lib/: aesprite.rs  aseprite.rs  ecs.rs  font.rs  input.rs  misc.rs  mod.rs  sprite.rs  state.rs
src/lib/ecs/: ecs.rs
src/lib/logging/: mod.rs
src/lib/opengl/: mod.rs  shader.rs  texture2d.rs
src/lib/systems/: components.rs  input.rs  mod.rs  physics.rs  renderer.rs
src/lib/systems/graphics/: test.vert  world.frag  world.vert
